Fixing cutoff content

--- a/src/assets/css/style-reset.css
+++ b/src/assets/css/style-reset.css
@@ -756,7 +756,7 @@ padding: 15px;
     border: none;
     outline: none;
     float: left;
-    font-size: 30px;
+    font-size: 25px;
     box-shadow: none;
     margin: 0;
 	background-color: inherit!important;
